examples/test/testpolicy11083.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11083
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key45: value15
      key47: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value47
      podSelector:
        matchLabels:
          key45: value40
          key24: value43
          key1: value31
